# subnet-scoring

./: README.md  pyproject.toml
condenses_scoring/: schemas.py  server.py
tests/: __init__.py  test_server.py
tests/texts/: compressed_completion.txt  compressed_long_prompt.txt  long_prompt.txt  original_completion.txt
