[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subnet-scoring"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.3.0",
    "datasets>=3.2.0",
    "fastapi>=0.115.8",
    "hf-transfer>=0.1.9",
    "openai>=1.62.0",
    "tiktoken>=0.8.0",
    "torch>=2.6.0",
    "transformers>=4.48.3",
    "uvicorn>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["condenses_scoring"]


[tool.hatch.envs.default.env-vars]
HF_HUB_ENABLE_HF_TRANSFER = "1"